iotsa 1.7.1 - 30-Mar-2018

- Added iotsaControl module and program to allow programmatic configuration of iotsa devices.
- Added more variables to /api/config for iotsaControl.
- Fixed case error in Esp.h include which stopped travis builds from working.

iotsa 1.6.1

- Added iotsaVersion.h and return version info in config api.

iotsa 1.6 - 26-Mar-2018

- WiFi config and general config have been split into two modules (listening on /wifi and /config, and the
  respective /api endpoints). All general configuration parameters are now in a global iotsaConfig structure.
  The iotsaConfig module does not have to be instantiated, this happens automatically.
- Configuration mode can now be active on the normal WiFi network. The special private network is only used when
  no WiFi network is configured or the configured network is not available. Private network no longer implies
  configuration mode.
- All web form argument handling has been converted to no longer using looping over the arguments.
- Default timeouts for reprogramming and configuration mode and such set to 5 minutes.

iotsa 1.5 - 8-Mar-2018

- Added support for capability-based access to resources.

iotsa 1.4 - 6-Mar-2018

- Fixed serious issue in design of access control.

iotsa 1.2.1 - 5-Mar-2018

- Fixed typo in ArduinoJson dependency

iotsa 1.2.0 - 28-Feb-2018

- Added unified REST access through IotsaApiMod.
- Adadpted IotsaAuthMode to allow fine-grained access control over API methods.

iotsa 1.1.0 - 29-Jan-2018

- Ported to platformIO (in addition to Arduino IDE)

iotsa 1.0.1 - 17-Jul-2017

- Added IotsaMod::htmlEncode() method to help escaping strings embedded in the HTML.
- Documentation updates

iotsa 1.0 - April 2017

- Initial github release.